[gd_scene load_steps=53 format=2]

[ext_resource path="res://assets/fonts/upheavtt_24.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/buttons/izone_active.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/road_active.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/road_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/road_normal.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/water_hover.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/sand_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/sand_normal.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/water_normal.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/dirt_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/sand_active.png" type="Texture" id=11]
[ext_resource path="res://assets/buttons/dirt_normal.png" type="Texture" id=12]
[ext_resource path="res://assets/buttons/rzone_hover.png" type="Texture" id=13]
[ext_resource path="res://assets/buttons/rzone_active.png" type="Texture" id=14]
[ext_resource path="res://assets/buttons/water_active.png" type="Texture" id=15]
[ext_resource path="res://assets/buttons/dirt_active.png" type="Texture" id=16]
[ext_resource path="res://assets/buttons/rzone_normal.png" type="Texture" id=17]
[ext_resource path="res://assets/buttons/czone_normal.png" type="Texture" id=18]
[ext_resource path="res://assets/buttons/czone_hover.png" type="Texture" id=19]
[ext_resource path="res://assets/buttons/czone_active.png" type="Texture" id=20]
[ext_resource path="res://assets/buttons/park_hover.png" type="Texture" id=21]
[ext_resource path="res://assets/buttons/park_active.png" type="Texture" id=22]
[ext_resource path="res://assets/buttons/izone_normal.png" type="Texture" id=23]
[ext_resource path="res://assets/buttons/izone_hover.png" type="Texture" id=24]
[ext_resource path="res://assets/buttons/park_normal.png" type="Texture" id=25]
[ext_resource path="res://toolbar_button_group.tres" type="ButtonGroup" id=26]
[ext_resource path="res://assets/buttons/pause_default.png" type="Texture" id=27]
[ext_resource path="res://assets/buttons/pause_pressed.png" type="Texture" id=28]
[ext_resource path="res://assets/buttons/play_default.png" type="Texture" id=29]
[ext_resource path="res://assets/buttons/play_pressed.png" type="Texture" id=30]
[ext_resource path="res://assets/buttons/fast_forward_pressed.png" type="Texture" id=31]
[ext_resource path="res://assets/buttons/fast_forward_default.png" type="Texture" id=32]
[ext_resource path="res://ui/hud/toolbar/toolbar_buttons.gd" type="Script" id=33]
[ext_resource path="res://assets/buttons/rock_active.png" type="Texture" id=34]
[ext_resource path="res://assets/buttons/ocean_active.png" type="Texture" id=35]
[ext_resource path="res://assets/buttons/ocean_normal.png" type="Texture" id=36]
[ext_resource path="res://assets/buttons/rock_normal.png" type="Texture" id=37]
[ext_resource path="res://assets/buttons/ocean_hover.png" type="Texture" id=38]
[ext_resource path="res://assets/buttons/rock_hover.png" type="Texture" id=39]
[ext_resource path="res://ui/hud/toolbar/time_button_group.tres" type="ButtonGroup" id=40]
[ext_resource path="res://ui/hud/toolbar/toolbar_time.gd" type="Script" id=41]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.231373, 0.223529, 0.262745, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.231373, 0.223529, 0.262745, 1 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.231373, 0.223529, 0.262745, 1 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.133333, 0.886275, 0.129412, 1 )
border_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.54902, 0.717647, 0.6, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.686275, 0.866667, 0.909804, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.964706, 0.839216, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.886275, 0.815686, 0.6, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.231373, 0.223529, 0.262745, 1 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[node name="Toolbar" type="HBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
theme = SubResource( 1 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="MarginContainer" parent="."]
margin_right = 320.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_constants/margin_right = 0

[node name="Panel" type="Panel" parent="Time"]
margin_right = 320.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Time"]
margin_right = 320.0
margin_bottom = 100.0
alignment = 1

[node name="Time_Controls" type="HBoxContainer" parent="Time/VBoxContainer"]
margin_top = 21.0
margin_right = 320.0
margin_bottom = 53.0
alignment = 1
script = ExtResource( 41 )
group = ExtResource( 40 )

[node name="Pause_Button" type="TextureButton" parent="Time/VBoxContainer/Time_Controls"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
toggle_mode = true
action_mode = 0
group = ExtResource( 40 )
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 28 )

[node name="Play_Button" type="TextureButton" parent="Time/VBoxContainer/Time_Controls"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
toggle_mode = true
pressed = true
action_mode = 0
group = ExtResource( 40 )
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )

[node name="Fast_Forward_Button" type="TextureButton" parent="Time/VBoxContainer/Time_Controls"]
margin_left = 180.0
margin_right = 212.0
margin_bottom = 32.0
toggle_mode = true
action_mode = 0
group = ExtResource( 40 )
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 31 )

[node name="Date" type="Label" parent="Time/VBoxContainer"]
margin_top = 57.0
margin_right = 320.0
margin_bottom = 79.0
text = "mm/dd/yyyy"
align = 1
valign = 1

[node name="Money" type="MarginContainer" parent="."]
margin_left = 320.0
margin_right = 640.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Panel" type="Panel" parent="Money"]
margin_right = 320.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Money"]
margin_right = 320.0
margin_bottom = 100.0
alignment = 1

[node name="Money_Total" type="Label" parent="Money/VBoxContainer"]
margin_top = 26.0
margin_right = 320.0
margin_bottom = 48.0
text = "$ 100,000,000"
align = 1
valign = 1

[node name="Money_Delta" type="Label" parent="Money/VBoxContainer"]
margin_top = 52.0
margin_right = 320.0
margin_bottom = 74.0
text = "+ $ 100"
align = 1

[node name="Population" type="MarginContainer" parent="."]
margin_left = 640.0
margin_right = 800.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Population"]
margin_right = 160.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 4 )

[node name="Demand" type="HBoxContainer" parent="Population"]
margin_right = 160.0
margin_bottom = 100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Res" type="VBoxContainer" parent="Population/Demand"]
margin_left = 52.0
margin_right = 68.0
margin_bottom = 100.0
alignment = 1

[node name="ResDemand" type="ProgressBar" parent="Population/Demand/Res"]
margin_top = 7.0
margin_right = 16.0
margin_bottom = 67.0
rect_min_size = Vector2( 16, 60 )
hint_tooltip = "Residential Demand"
size_flags_vertical = 1
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Population/Demand/Res"]
margin_top = 71.0
margin_right = 16.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( -836.142, -450.883 )
text = "R"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Com" type="VBoxContainer" parent="Population/Demand"]
margin_left = 72.0
margin_right = 88.0
margin_bottom = 100.0
alignment = 1

[node name="ComDemand" type="ProgressBar" parent="Population/Demand/Com"]
margin_top = 7.0
margin_right = 16.0
margin_bottom = 67.0
rect_min_size = Vector2( 16, 60 )
hint_tooltip = "Commercial Demand"
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Population/Demand/Com"]
margin_top = 71.0
margin_right = 16.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( -836.142, -450.883 )
text = "C"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ind" type="VBoxContainer" parent="Population/Demand"]
margin_left = 92.0
margin_right = 108.0
margin_bottom = 100.0
alignment = 1

[node name="IndDemand" type="ProgressBar" parent="Population/Demand/Ind"]
margin_top = 7.0
margin_right = 16.0
margin_bottom = 67.0
rect_min_size = Vector2( 16, 60 )
hint_tooltip = "Industrial Demand"
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Population/Demand/Ind"]
margin_top = 71.0
margin_right = 16.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( -836.142, -450.883 )
text = "I"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="MarginContainer" parent="."]
margin_left = 800.0
margin_right = 1280.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
script = ExtResource( 33 )
group = ExtResource( 26 )

[node name="Panel" type="Panel" parent="Actions"]
margin_right = 480.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 11 )

[node name="Buttons" type="HBoxContainer" parent="Actions"]
margin_left = 62.0
margin_top = 34.0
margin_right = 418.0
margin_bottom = 66.0
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="dirt_button" type="TextureButton" parent="Actions/Buttons"]
margin_right = 32.0
margin_bottom = 32.0
hint_tooltip = "Dirt Tile"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 26 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 10 )
texture_focused = ExtResource( 16 )
stretch_mode = 2

[node name="sand_button" type="TextureButton" parent="Actions/Buttons"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
hint_tooltip = "Sand Tile"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 26 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 11 )
stretch_mode = 2

[node name="rock_button" type="TextureButton" parent="Actions/Buttons"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
hint_tooltip = "Rock Tile"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 26 )
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 34 )
texture_hover = ExtResource( 39 )
texture_focused = ExtResource( 34 )
stretch_mode = 2

[node name="ocean_button" type="TextureButton" parent="Actions/Buttons"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
hint_tooltip = "Ocean Tile"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 26 )
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 35 )
texture_hover = ExtResource( 38 )
texture_focused = ExtResource( 35 )
stretch_mode = 2

[node name="rzone_button" type="TextureButton" parent="Actions/Buttons"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
hint_tooltip = "Residential Zoning"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 26 )
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 13 )
texture_focused = ExtResource( 14 )
stretch_mode = 2

[node name="czone_button" type="TextureButton" parent="Actions/Buttons"]
margin_left = 180.0
margin_right = 212.0
margin_bottom = 32.0
hint_tooltip = "Commercial Zoning"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 26 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 19 )
texture_focused = ExtResource( 20 )
stretch_mode = 2

[node name="izone_button" type="TextureButton" parent="Actions/Buttons"]
margin_left = 216.0
margin_right = 248.0
margin_bottom = 32.0
hint_tooltip = "Industrial Zoning"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 26 )
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 24 )
texture_focused = ExtResource( 2 )
stretch_mode = 2

[node name="park_button" type="TextureButton" parent="Actions/Buttons"]
margin_left = 252.0
margin_right = 284.0
margin_bottom = 32.0
hint_tooltip = "Park Tile"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 26 )
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 21 )
texture_focused = ExtResource( 22 )
stretch_mode = 2

[node name="road_button" type="TextureButton" parent="Actions/Buttons"]
margin_left = 288.0
margin_right = 320.0
margin_bottom = 32.0
hint_tooltip = "Road Tile"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 26 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 3 )
stretch_mode = 2

[node name="water_button" type="TextureButton" parent="Actions/Buttons"]
margin_left = 324.0
margin_right = 356.0
margin_bottom = 32.0
hint_tooltip = "Add/Remove Water"
toggle_mode = true
keep_pressed_outside = true
group = ExtResource( 26 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 15 )
stretch_mode = 2
